--- a/_calculator__buttons.scss
+++ b/_calculator__buttons.scss
@@ -1,12 +1,12 @@
 @use "variables" as *;
 
-.button {
+.calculator__button {
   background-color: $secondary-color;
   color: white;
   padding: 20px;
   font-size: 26px;
-  margin: 4px 2px;
+  margin: 8px 8px;
   text-align: center;
   border: none;
-  border-radius: 50%;
+  border-radius: 25%;
 }
