added display styling and linked script

--- a/_calculator.scss
+++ b/_calculator.scss
@@ -14,7 +14,7 @@
     "main main main main";
 }
 
-.calculator_display {
+.calculator__display {
   grid-area: header;
   grid-row-start: 1;
   grid-row-end: 1;
