--- a/_calculator.scss
+++ b/_calculator.scss
@@ -3,9 +3,10 @@
 .calculator {
   display: grid;
   grid-template-columns: 100px 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
   justify-content: center;
   grid-template-areas:
+    "header header header header"
     "header header header header"
     "main main main main"
     "main main main main"
