--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 .calculator {
   display: grid;
   grid-template-columns: 100px 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
   justify-content: center;
-  grid-template-areas: "header header header header" "main main main main" "main main main main" "main main main main" "main main main main" "main main main main";
+  grid-template-areas: "header header header header" "header header header header" "main main main main" "main main main main" "main main main main" "main main main main" "main main main main";
 }
 
 .calculator__display {
