--- a/_calculator.scss
+++ b/_calculator.scss
@@ -1,6 +1,6 @@
 @use "variables" as *;
 
-.calculator {
+.calculator__grid {
   display: grid;
   grid-template-columns: 100px 100px 100px 100px;
   grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
