added some stuff, but this approach won't work, restart js again

--- a/_calculator__display.scss
+++ b/_calculator__display.scss
@@ -1,8 +1,15 @@
 @use "variables" as *;
 
-.current-operand .previous-operand {
+.current-operand {
   background-color: $primary-color;
   font-size: 80px;
   color: white;
+  text-align: right;
+}
+
+.previous-operand {
+  background-color: $primary-color;
+  font-size: 48px;
+  color: aqua;
   text-align: right;
 }
