--- a/_calculator.scss
+++ b/_calculator.scss
@@ -2,25 +2,39 @@
 
 .calculator__grid {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
   justify-content: center;
-  grid-template-areas:
-    "header header header header"
-    "header2 header2 header2 header2"
-    "main main main main"
-    "main main main main"
-    "main main main main"
-    "main main main main"
-    "main main main main";
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px;
+  background-color: $primary-color;
+  //   grid-template-areas:
+  //     "header header header header"
+  //     "header2 header2 header2 header2"
+  //     "main main main main"
+  //     "main main main main"
+  //     "main main main main"
+  //     "main main main main"
+  //     "main main main main";
 }
 
-.previous-operand {
-  grid-area: header;
+.output {
+  grid-column: 1 / -1;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
-.current-operand {
-  grid-area: header2;
-  grid-row-start: 1;
-  grid-row-end: 1;
-}
+// .previous-operand {
+//   grid-area: header;
+// }
+
+// .current-operand {
+//   grid-area: header2;
+//   grid-row-start: 1;
+//   grid-row-end: 1;
+// }
