--- a/style.css
+++ b/style.css
@@ -2,25 +2,27 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #22252d;
 }
 
 .calculator__grid {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
   justify-content: center;
-  grid-template-areas: "header header header header" "header2 header2 header2 header2" "main main main main" "main main main main" "main main main main" "main main main main" "main main main main";
+  align-content: center;
+  min-height: 100vh;
+  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-rows: 100px 100px 100px 100px 100px;
+  background-color: #22252d;
 }
 
-.previous-operand {
-  grid-area: header;
-}
-
-.current-operand {
-  grid-area: header2;
-  grid-row-start: 1;
-  grid-row-end: 1;
+.output {
+  grid-column: 1/-1;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 .calculator__button {
@@ -34,9 +36,16 @@
   border-radius: 25%;
 }
 
-.current-operand .previous-operand {
+.current-operand {
   background-color: #22252d;
   font-size: 80px;
   color: white;
+  text-align: right;
+}
+
+.previous-operand {
+  background-color: #22252d;
+  font-size: 48px;
+  color: aqua;
   text-align: right;
 }/*# sourceMappingURL=style.css.map */
